--- a/circle.yml
+++ b/circle.yml
@@ -15,8 +15,9 @@ test:
     - while [ ! -e ~/sauce_is_ready ]; do sleep 1; done
     - python -m hello.hello_app:
         background: true
-    # Wait for app to be ready
-    - curl --retry 10 --retry-delay 2 -v http://localhost:5000
+    # Set the domain to test against 
+    - export DOCKER_WEB_IP 'dev.insuramatch.com'
     # Run selenium tests
     - python tests/mass-quote-flow.py
   post:
+    - killall --wait sc  # wait for Sauce Connect to close the tunnel
