--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,9 @@
 machine:
   python:
     version: 3.5.1
+  environment:
+    DOCKER_WEB_IP: dev.insuramatch.com
+  
 
 dependencies:
   pre: 
@@ -17,8 +20,6 @@ test:
         background: true
     # Wait for tunnel to be ready
     - while [ ! -e ~/sauce_is_ready ]; do sleep 1; done
-    # Set the domain to test against 
-    - export DOCKER_WEB_IP='stage.insuramatch.com'
     # Run selenium tests
     - python ~/sauce-test/tests/mass-quote-flow.py
   post:
